Fix issue of footer scrolling text not visible on mobile

--- a/assets/scss/_style.scss
+++ b/assets/scss/_style.scss
@@ -34,7 +34,7 @@ body {
   color: $near-white;
   display: grid;
   grid-template-rows: 1fr auto;
-  min-height: calc(100vh - 64px);
+  min-height: calc(100vh - 88px);
   opacity: 0;
 }
 
